update post, chat
